--- a/HeartRunning/AndroidManifest.xml
+++ b/HeartRunning/AndroidManifest.xml
@@ -2,7 +2,9 @@
     package="com.local.heartrunning"
     android:versionCode="1"
     android:versionName="1.0" >
-
+    <uses-feature
+	  android:glEsVersion="0x00020000"
+	  android:required="true"/>
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
@@ -12,8 +14,15 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" />
     <uses-permission android:name="android.permission.FLASHLIGHT"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     
-    
+    <permission
+          android:name="com.example.mapdemo.permission.MAPS_RECEIVE"
+          android:protectionLevel="signature"/>
+        <uses-permission android:name="com.example.mapdemo.permission.MAPS_RECEIVE"/>
     
     <application
         android:icon="@drawable/ic_launcher"
@@ -52,12 +61,15 @@
             android:label="@string/title_activity_post_run_view" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <meta-data android:value="@string/app_id" android:name="com.facebook.sdk.ApplicationId"/>
         <activity android:name="com.facebook.LoginActivity" android:label="@string/app_name"></activity>
+	    <meta-data
+		    android:name="com.google.android.maps.v2.API_KEY"
+		    android:value="AIzaSyBGUuT0ls17gRg50inoDohzR6z7lA2wAP0"/>
+    
     </application>
 
 </manifest>
