--- a/HeartRunning/AndroidManifest.xml
+++ b/HeartRunning/AndroidManifest.xml
@@ -1,37 +1,45 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.local.heartrunning"
     android:versionCode="1"
     android:versionName="1.0" >
+
     <uses-feature
-	  android:glEsVersion="0x00020000"
-	  android:required="true"/>
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
-    <uses-permission android:name="android.permission.FLASHLIGHT"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-	<uses-permission android:name="android.permission.WAKE_LOCK" />
-    
+
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <permission
-          android:name="com.example.mapdemo.permission.MAPS_RECEIVE"
-          android:protectionLevel="signature"/>
-        <uses-permission android:name="com.example.mapdemo.permission.MAPS_RECEIVE"/>
-    
+        android:name="com.example.mapdemo.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.example.mapdemo.permission.MAPS_RECEIVE" />
+
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <uses-library android:name="com.google.android.maps" />
+
         <activity
-            android:name=".MainActivity"
+            android:name="com.local.heartrunning.MainActivity"
             android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,7 +48,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainMenu"
+            android:name="com.local.heartrunning.MainMenu"
             android:label="@string/title_activity_main_menu" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -49,7 +57,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RunningView"
+            android:name="com.local.heartrunning.RunningView"
             android:label="@string/title_activity_running_view" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -58,19 +66,32 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".PostRunView"
+            android:name="com.local.heartrunning.PostRunView"
             android:label="@string/title_activity_post_run_view" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <meta-data android:value="@string/app_id" android:name="com.facebook.sdk.ApplicationId"/>
-        <activity android:name="com.facebook.LoginActivity" android:label="@string/app_name"></activity>
-	    <meta-data
-		    android:name="com.google.android.maps.v2.API_KEY"
-		    android:value="AIzaSyBGUuT0ls17gRg50inoDohzR6z7lA2wAP0"/>
-    
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:label="@string/app_name" >
+        </activity>
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBGUuT0ls17gRg50inoDohzR6z7lA2wAP0" />
+
+        <activity
+            android:name="com.local.heartrunning.PostRunMapView"
+            android:label="@string/title_activity_post_run_map_view" >
+        </activity>
     </application>
 
 </manifest>
