--- a/HeartRunning/project.properties
+++ b/HeartRunning/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=Google Inc.:Google APIs:15
-android.library.reference.1=../../Facebook/facebook
+android.library.reference.1=../../FacebookSDK
 android.library=false
