Cleared out multiple launcher icons + Screen locked to one orientation

--- a/HeartRunning/AndroidManifest.xml
+++ b/HeartRunning/AndroidManifest.xml
@@ -52,17 +52,15 @@
             android:label="@string/title_activity_main_menu" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.local.heartrunning.RunningView"
-            android:label="@string/title_activity_running_view" >
+            android:label="@string/title_activity_running_view"
+            android:screenOrientation="portrait" 
+            android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
@@ -70,8 +68,6 @@
             android:label="@string/title_activity_post_run_view" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
